Исправлены миграции, настроены API для tasks/users
