# openapi/openapi.yaml
@@ -52,7 +52,7 @@ paths:
           required: true
           schema:
             type: integer
-            format: int64
+            format: uint
       requestBody:
         description: Data for update (include user_id if needed)
         required: true
@@ -83,7 +83,7 @@ paths:
           required: true
           schema:
             type: integer
-            format: int64
+            format: uint
       responses:
         '204':
           description: Task deleted successfully (no content)
@@ -203,3 +203,13 @@ components:
         user_id:
           type: integer
           format: uint
+    User:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: uint
+        email:
+          type: string
+        password:
+          type: string
